--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
       android:label="@string/app_name"
       android:supportsRtl="true"
       android:theme="@style/AppTheme">
-    <activity android:name=".MainActivity">
+    <activity android:name=".activity.MainActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
 
@@ -19,7 +19,7 @@
     </activity>
 
     <service
-        android:name=".ChatHeadService"
+        android:name=".Service.FloatingHeadService"
         android:enabled="true"
         android:exported="true">
     </service>
